tests/fixtures/positive/architecture/package-dependency-cycle/app/src/main/kotlin/com/example/a/A.kt
package com.example.a

import com.example.b.B

class A(private val dependency: B)
